--- a/src/app/components/spa-service/spa-service.component.html
+++ b/src/app/components/spa-service/spa-service.component.html
@@ -9,7 +9,11 @@
         <span><span class="blue-text">Price: </span>{{ spaService.price | currency: 'BYN ' }}</span>
     </div>
     
-    <button class="btn-with-border" (click)="signUpForProcedur()">get</button>
+    <div>
+        <button class="light-btn" style="margin-right: 20px;" (click)="showFeedbacks()">feedbacks</button>
+        <button class="btn-with-border" (click)="signUpForProcedur()">get</button>
+    </div>
+   
     
     <div *ngIf="modalService.isLogin$ | async">
         <app-modal title="Authorization" *ngIf="modalService.isVisible$ | async">
